test/lit/pto/low_precision/vcvt_low_precision_verify_invalid.pto
// Copyright (c) 2026 Huawei Technologies Co., Ltd.
// This program is free software, you can redistribute it and/or modify it under the terms and conditions of
// CANN Open Software License Agreement Version 2.0 (the "License").
// Please refer to the License for details. You may not use this file except in compliance with the License.
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
// INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
// See LICENSE in the root of the software repository for the full text of the License.

// Guards low-precision vcvt verifier diagnostics for invalid contracts.
// RUN: not ptoas --pto-arch=a5 --pto-backend=vpto %s 2>&1 | FileCheck %s

// CHECK: error: 'pto.vcvt' op requires rnd attr for this vcvt type pair
// CHECK: error: 'pto.vcvt' op part must be EVEN or ODD for 8/16 and 16/32 vcvt forms
// CHECK: error: 'pto.vcvt' op unsupported vcvt source/result element type pair

module attributes {pto.target_arch = "a5"} {
  func.func @vcvt_low_precision_missing_rnd(
      %src_f32: !pto.vreg<64xf32>)
      attributes {pto.kernel_kind = #pto.kernel_kind<vector>} {
    pto.vecscope {
      %mask_b32 = pto.pset_b32 "PAT_ALL" : !pto.mask<b32>
      %0 = pto.vcvt %src_f32, %mask_b32 {sat = "SAT", part = "P0"} : !pto.vreg<64xf32>, !pto.mask<b32> -> !pto.vreg<256x!pto.hif8>
    }
    return
  }

  func.func @vcvt_low_precision_fp4_rejects_p0(
      %src_f4: !pto.vreg<256x!pto.f4E2M1x2>)
      attributes {pto.kernel_kind = #pto.kernel_kind<vector>} {
    pto.vecscope {
      %mask_b8 = pto.pset_b8 "PAT_ALL" : !pto.mask<b8>
      %0 = pto.vcvt %src_f4, %mask_b8 {part = "P0"} : !pto.vreg<256x!pto.f4E2M1x2>, !pto.mask<b8> -> !pto.vreg<128xbf16>
    }
    return
  }

  func.func @vcvt_low_precision_unsupported_pair(
      %src_fp8: !pto.vreg<256xf8E5M2>)
      attributes {pto.kernel_kind = #pto.kernel_kind<vector>} {
    pto.vecscope {
      %mask_b8 = pto.pset_b8 "PAT_ALL" : !pto.mask<b8>
      %0 = pto.vcvt %src_fp8, %mask_b8 {part = "P0"} : !pto.vreg<256xf8E5M2>, !pto.mask<b8> -> !pto.vreg<128xbf16>
    }
    return
  }
}
